dataset1235/2025-2/610742602/users/776967928/executions/2563853024_2296111720.log
== RUN (2025-09-02 20:24:53)
-- CODE: 
base = int(input("base: "))
altura = int((input("altura: "))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 2
    altura = int((input("altura: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 2
    altura = int((input("altura: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 2
    altura = int((input("altura: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 2
    altura = int((input("altura: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 2
    altura = int((input("altura: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 2
    altura = int((input("altura: "))
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:26:21)
-- CODE: 
base = int(float(input("base: ")))
altura = int(float(input("altura: ")))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
base: altura: 32
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
base: altura: 6000
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
base: altura: 360
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
base: altura: 6
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
base: altura: 1000
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
base: altura: 72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:32:32)
-- CODE: 
base = float(input("base: "))
altura = float(input("altura: "))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
base: altura: 36.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
base: altura: 6000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
base: altura: 360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
base: altura: 6.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
base: altura: 1000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
base: altura: 83.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:29:52)
-- CODE: 
base = int(float(input("base: ")))
altura = int(float(input("altura: ")))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
base: altura: 32
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
base: altura: 6000
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
base: altura: 360
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
base: altura: 6
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
base: altura: 1000
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
base: altura: 72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:24)
-- CODE: 
base = int(input()
altura = int((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:27:25)
-- CODE: 
base = int(float(input("base: ")))
altura = int(float(input("altura: ")))
area = base * altura
print(round(area,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:27:40)
-- CODE: 
base = int(float(input("base: ")))
altura = int(float(input("altura: ")))
area = base * altura
print(round(area,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
base: altura: 32
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
base: altura: 6000
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
base: altura: 360
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
base: altura: 6
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
base: altura: 1000
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
base: altura: 72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:26:42)
-- CODE: 
base = int(float(input("base: ")))
altura = int(float(input("altura: ")))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
base: altura: 32
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
base: altura: 6000
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
base: altura: 360
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
base: altura: 6
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
base: altura: 1000
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
base: altura: 72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:22:01)
-- CODE: 
base = float(input("insira a base: ")
altura = float(input("insira a altura: "))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input("insira a base: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input("insira a base: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input("insira a base: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input("insira a base: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input("insira a base: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input("insira a base: ")
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:26:33)
-- CODE: 
base = int(float(input("base: ")))
altura = int(float(input("altura: ")))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
base: altura: 32
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
base: altura: 6000
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
base: altura: 360
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
base: altura: 6
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
base: altura: 1000
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
base: altura: 72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:26)
-- CODE: 
base = int(input()
altura = int((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = int(input()
               ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:27:21)
-- CODE: 
base = int(float(input("base: ")))
altura = int(float(input("altura: ")))
area = base * altura
print(round(area,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 4
    print(round(area,1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:32:25)
-- CODE: 
base = float(input("base: "))
altura = float(input("altura: "))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
base: altura: 36.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
base: altura: 6000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
base: altura: 360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
base: altura: 6.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
base: altura: 1000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
base: altura: 83.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
